# qa_waffle

./: .gitignore  README.md  manage.py  pyproject.toml  scripts.py
qa_waffle/: asgi.py  settings.py  urls.py  wsgi.py
