[tool.poetry]
name = "qa_waffle"
version = "0.1.0"
description = ""
authors = ["ibukin <ibukin@voice-link.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
